# linch-mind

./: .clang-format  .editorconfig  .gitignore  ARCHITECTURE_VALIDATION_REPORT.md  CLAUDE.md  CONFIG_CLEANUP_SUMMARY.md  ENVIRONMENT_ISOLATION_IMPLEMENTATION_REPORT.md  Makefile  NEXT_STEPS.md  Pure_IPC_Architecture_Guide.md  README.md  WebView_Config_Implementation_Summary.md  architecture_evaluation_report.md  ipc_benchmark_results.json  ipc_performance_benchmark.py  linch  linch-mind  linch-mind.config.yaml  pyproject.toml  test_connector_config_fixes.py  test_connector_db.py  test_connector_ui.py  test_events_client.py  test_intelligent_services.py  test_ipc_architecture.py  test_service_registration.py  test_startup.md
connectors/: README.md  __init__.py  build_all.py  connector.schema.json  connectors.yaml  instances.yaml  pyproject.toml  registry.json
connectors/official/: __init__.py
connectors/official/clipboard/: CMakeLists.txt  README.md  __init__.py  build.sh  build_executable.py  build_info.hpp.in  clipboard-connector  connector.json  connector.toml  main.py  requirements.txt  test_trigger.txt
connectors/official/filesystem/: CMakeLists.txt  README.md  __init__.py  advanced_config_schema.py  build.sh  build_executable.py  connector.json  connector.toml  main.py  requirements.txt  test_config_small.toml.backup
connectors/official/system_info/: CMakeLists.txt  README.md  build.sh  connector.toml
connectors/official/user_context/: CMakeLists.txt  README.md  build.sh  build_info.hpp.in  connector.toml
connectors/release/: README.md  registry.json
connectors/scripts/: CMakeLists.txt  build.sh  connector_builder.py  registry_generator  registry_generator.cpp  registry_generator.py  version_manager  version_manager.cpp  version_manager.py
connectors/shared/: CMakeLists.txt  README.md  __init__.py  base.py  config.py
connectors/shared/scripts/: build_connector.sh
connectors/shared/src/: base_connector.cpp  chunk_manager.cpp  config_manager.cpp  connector_status.cpp  daemon_discovery.cpp  error_handler.cpp  file_filter.cpp  file_index_provider.cpp  http_client.cpp  ipc_client.cpp  unified_client.cpp  utils.cpp
connectors/tests/: CMakeLists.txt  test_config.json  test_unified_client.cpp
daemon/: .flake8  .pre-commit-config.yaml  AI_ARCHITECTURE_DESIGN.md  DATABASE_ENCRYPTION_REPORT.md  DEDUPLICATION_REPORT.md  INTELLIGENT_STORAGE_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  README.md  config.py  demo_storage_architecture.py  ipc_main.py  linch-mind.yaml.template  main.py  performance_analysis_report.txt  performance_benchmark_report.txt  pyproject.toml  pytest.ini  run_tests.py  setup.cfg  test_connector_discovery.py  test_cross_platform_ipc.py  test_environment_isolation.py
daemon/api/: dependencies.py  main.py  storage_api.py  webview_config.py
daemon/api/routers/: connector_config_api.py  connector_installer.py  (+10 more)
daemon/backup_old_architecture/: connector_management.py  connector_manager.py  connectors.py
daemon/config/: README.md  README_OLD.md  bootstrap_config.py  config_bridge.py  config_context.py  config_manager.py  core_config.py  database_config_manager.py  dependencies.py  error_handling.py  intelligent_storage.py  ipc_security_config.py  lazy_config.py  logging_config.py  unified_config.py  unified_config_manager.py  user_config_manager.py
daemon/core/: __init__.py  application_bootstrap.py  container.py  database_manager.py  dependency_resolver.py  environment_manager.py  error_codes.py  error_handling.py  exception_handler.py  service_facade.py  service_facade_standardized.py  service_registry.py
daemon/migrations/: 20250803062100_fix_graph_nodes_schema.sql
daemon/models/: api_models.py  connector_status.py  core_models.py  database.py  database_models.py  storage_models.py
daemon/scripts/: cleanup_duplicate_connectors.py  config_manager_cli.py  environment_manager_cli.py  filesystem_performance_analysis.py  fix_circular_dependencies.py  initialize_environment.py  manual_connector_registration.py  migrate_config_to_toml.py  migrate_storage_architecture.py  migrate_to_encrypted_db.py  migrate_to_unified_services.py  migrate_user_config.py  performance_benchmark.py  setup_intelligent_storage.py  simplify_config_files.py  test_process_protection.py
daemon/services/: MIGRATION_GUIDE.md  cached_networkx_service.py  compatibility_layer.py  connector_registry_service.py  content_analysis_service.py  cross_platform_ipc.py  database_config_service.py  database_migration.py  database_migration_executable_paths.py  database_service.py  encrypted_database_service.py  fast_index_storage_service.py  ipc_client.py  ipc_middleware.py  ipc_protocol.py  ipc_router.py  ipc_routes.py  ipc_security.py  ipc_server.py  optimized_connection_pool.py  optimized_sqlite_service.py  registry_discovery_service.py  secure_database.py  shared_executor_service.py  sqlcipher_database_service.py  storage_strategy.py  system_config_service.py  unified_cache_service.py  unified_config_manager.py  unified_database_service.py  unified_metrics_service.py  unified_persistence_service.py  unified_search_service.py  user_config_db_service.py  webview_config_service.py  windows_ipc_integration_test.py  windows_ipc_server.py  windows_ipc_test_client.py  windows_named_pipe.py
daemon/tests/: README.md  conftest.py  conftest_ipc.py  ipc_test_client.py  test_api_integration_effective.py  test_architecture_performance.py  test_config_system.py  test_connector_config_api.py  test_connector_lifecycle_api.py  test_connector_manager.py  test_connector_manager_effective.py  test_connector_ui_api.py  test_core_components.py  test_core_components_real.py  test_core_real_unittest.py  test_database_service.py  test_database_service_effective.py  test_intelligent_storage.py  test_ipc_integration.py  test_ipc_integration_comprehensive.py  test_optimizations.py  test_peer_credentials.py  test_process_manager.py  test_storage_integration.py  test_unified_connector_service.py  test_unified_services_integration.py
daemon/utils/: config_loader.py  daemon_discovery.py  health_check.py
(+530 files in other folders)
