[tool.poetry]
name = "linch-mind-connectors"
version = "0.1.0"
description = "Linch Mind连接器套件"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [
    {include = "shared", from = "."},
    {include = "official", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
# 连接器核心依赖
httpx = "^0.27.0"
watchdog = "^6.0.0"
# 数据处理
pandas = "^2.0.0"
# 剪贴板
pyperclip = "^1.8.0"
# 文件处理
pathlib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# 连接器启动脚本
filesystem-connector = "official.filesystem.main:main"
clipboard-connector = "official.clipboard.main:main"