[tool.poetry]
name = "linch-mind-daemon"
version = "0.1.0"
description = "Linch Mind Personal AI Assistant Daemon"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.5.0"
sqlalchemy = "^2.0.0"
watchdog = "^6.0.0"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
networkx = "^3.4.0"
chromadb = "^0.5.0"
sentence-transformers = "^3.3.0"
httpx = "^0.27.0"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linch-daemon = "api.main:main"