[tool.poetry]
name = "linch-mind-daemon"
version = "0.2.0"
description = "Linch Mind 连接器管理和数据存储服务"
authors = ["laofahai <laofahai@gmail.com>"]
readme = "README.md"
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.5.0"
sqlalchemy = "^2.0.0"
# pysqlcipher3 = "1.2.0"  # SQLCipher support - 临时禁用
watchdog = "^6.0.0"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
httpx = "^0.27.0"
aiohttp = "^3.12.15"
cryptography = "^42.0.0"
pyyaml = "^6.0.0"
jsonschema = "^4.17.0"
chromadb = "^0.5.0"  # Vector storage
networkx = "^3.4.0"  # Graph analytics
scikit-learn = "^1.6.0"  # For embedding utilities
numpy = "^2.0.0"  # Mathematical operations
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
httpx = "^0.27.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
linch-daemon = "api.main:main"
test-daemon = "run_tests:main"