[project]
name = "linch-mind-daemon"
version = "0.2.0"
description = "Linch Mind 连接器管理和数据存储服务"
authors = [{name = "laofahai", email = "laofahai@gmail.com"}]
readme = "README.md"
dynamic = []
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"
pydantic-settings = "^2.5.0"
sqlalchemy = "^2.0.0"
watchdog = "^6.0.0"
psutil = "^7.0.0"
python-multipart = "^0.0.20"
cryptography = "^42.0.0"
pyyaml = "^6.0.0"
tomli-w = "^1.0.0"  # TOML写入支持 (Python 3.11+有内置tomllib读取)
jsonschema = "^4.17.0"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.3.0"
networkx = "^3.4.0"
scikit-learn = "^1.6.0"
numpy = "^2.0.0"
aiofiles = "^24.1.0"
keyring = "^25.5.0"
sqlcipher3 = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mccabe = "^0.7.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.0.0"
mypy = "^1.8.0"
pylint = "^3.0.0"
bandit = "^1.7.5"
safety = "^3.0.1"
autoflake = "^2.3.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core", "setuptools<81"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
linch-daemon = "main:main"
test-daemon = "run_tests:main"

# 代码质量工具配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["services", "models", "utils"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
select = ["E", "W", "F", "C", "B"]
ignore = ["E203", "E501", "W503", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D200", "D202", "D204", "D205", "D400"]
max-complexity = 10

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes"
]

[tool.pylint.format]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
